# sdk-python

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml
src/buildfunctions/: __init__.py  agent_logic_safety.py  client.py  cpu_function.py  cpu_sandbox.py  dotdict.py  errors.py  framework.py  gpu_function.py  gpu_sandbox.py  http_client.py  memory.py  model.py  resolve_code.py  runtime_controls.py  types.py  uploader.py
tests/: auth.py  gpu_function_code.py  test_cpu_function.py  test_cpu_sandbox.py  test_gpu_function.py  test_gpu_sandbox_with_local_model.py
tests/examples/: auth.py  cpu_function_code.py  cpu_sandbox_code.py  gpu_function_code_streaming.py  gpu_function_shared_memory_code.py  gpu_sandbox_code.py  gpu_sandbox_shared_memory_code.py  test_cpu_function.py  test_cpu_sandbox.py  test_gpu_function.py  test_gpu_function_shared_memory.py  test_gpu_sandbox_shared_memory.py  test_gpu_sandbox_with_local_model.py  test_model_delete.py  test_model_upload.py
tests/examples/runtime_controls/: conftest.py  helpers.py  test_api_surface.py  test_budget.py  test_circuit_breaker.py  test_docs_examples.py  test_edge_cases.py  test_loop_breaker.py  test_observability.py  test_overrides.py  test_policy.py  test_state_adapters.py  test_timeout_cancel_retry.py  test_verifiers_idempotency_concurrency.py
tests/examples/runtime_controls/pre_execution/: test_exit_condition.py  test_injection_guard.py  test_intent_allowlist.py
