[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buildfunctions"
version = "0.2.2"
description = "The Buildfunctions SDK for Agents: Hardware-isolated CPU and GPU Sandboxes for untrusted AI actions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Buildfunctions" }
]
keywords = [
    "AIAgents",
    "AIInfrastructure",
    "AIApps",
    "Serverless",
    "GPUs",
    "Sandboxes",
    "DeveloperExperience",
]
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://www.buildfunctions.com"
Documentation = "https://www.buildfunctions.com/docs/sdk/quickstart"
Repository = "https://github.com/buildfunctions/sdk-python"
Issues = "https://github.com/buildfunctions/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/buildfunctions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
